--- a/Executor.html
+++ b/Executor.html
@@ -116,7 +116,7 @@
     
     <body>
         <section class="top">
-            <nav class="navbar"> <a href="Home.html">Home</a> <a class="active" href="Executor.html">Executor Support</a>
+            <nav class="navbar"> <a href="index.html">Home</a> <a class="active" href="Executor.html">Executor Support</a>
             <div class="split">
                 <div id = "title" class="title">
                     <h1>Delta Hub</h1>
